--- a/index.html
+++ b/index.html
@@ -8,4 +8,15 @@
        <link rel="stylesheet" href="style.css">
        <title>Portfolio</title>
     </head>
+    <body>
+        <nav class="navbar">
+            <div class="logo">Laura Jacobsen</div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Om mig</a></li>
+                </ul>
+            </div>
+        </nav>
+    </body>
 </html>
