breakpoint og navbar
Skrevet breakpoint ind og lavet menubar med burgermenu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <body>
         <nav class="navbar">
             <div class="logo">Laura Jacobsen</div>
+            <a href="#" class="menubutton">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
             <div class="links">
                 <ul>
                     <li><a href="#">Portfolio</a></li>
