--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
        <meta name="keywords" content="html, css, script, portfolio, multimediedesign">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="style.css">
+       <link rel="script" href="script.js">
        <title>Portfolio</title>
     </head>
     <body>
