--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="style.css">
        <link rel="script" href="script.js">
+       <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <title>Portfolio</title>
     </head>
     <body>
