--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
        <title>Portfolio</title>
     </head>
     <body>
+        <!--Navbar start-->
         <nav class="navbar">
             <div class="logo">Laura Jacobsen</div>
             <a href="#" class="menubutton">
@@ -25,5 +26,6 @@
                 </ul>
             </div>
         </nav>
+        <!--Navbar slut-->
     </body>
 </html>
