--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
         </nav>
         <!--Navbar slut-->
         <!--Grid-->
+        <div class="container">
+            <main>Main</main>
+            <div id="content1">Content1</div>
+            <div id="content2">Content2</div>
+            <div id="content3">Content3</div>
+            <div id="content4">Content4</div>
+            <div id="content5">Content5</div>
+            <footer>Footer</footer>
+        </div>
     </body>
 </html>
