manglende grid areas tilføjet

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <div id="content2">Content2</div>
             <div id="content3">Content3</div>
             <div id="content4">Content4</div>
+            <div class="button">Knap</div>
             <div id="content5">Content5</div>
+            <div id="content6">Content6</div>
+            <div id="content7">Content7</div>
             <footer>Footer</footer>
         </div>
     </body>
