Billede sat ind i main
Første billede sat ind i main

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
-            <main>Main</main>
+            <main><img src="work.png" alt="laptop"></main>
             <div id="content1">Content1</div>
             <div id="content2">Content2</div>
             <div id="content3">Content3</div>
