Billede tiljøet og styling
Conceptcar billede tiljøet og styling af content5

--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
         <!--Grid-->
         <div class="container">
             <main><img src="work.png" alt="laptop"></main>
-            <div id="content1">Content1</div>
-            <div id="content2">Content2</div>
-            <div id="content3">Content3</div>
+            <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
+            <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
+            <div id="content3"><img src="concept-car-A.png" alt="konceptbil"></div>
             <div id="content4">Content4</div>
-            <div class="button">Knap</div>
-            <div id="content5">Content5</div>
+            <div class="button">Se mere her</div>
+            <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
+                Jeg bor i Næstved med min kæreste Magnus. 
+                Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi. 
+                Før det, har jeg taget en HF på Næstved gymnasium.
+                I min fritid er jeg glad for at fotografere, og specielt natur.
+                <br>
+                Se gerne nogle af mine projekter nedenfor.</p></div>
             <div id="content6">Content6</div>
             <div id="content7">Content7</div>
             <footer>Footer</footer>
