--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 I min fritid er jeg glad for at fotografere, og specielt natur.
                 <br>
                 Se gerne nogle af mine projekter nedenfor.</p></div>
-            <div id="content6">Content6</div>
-            <div id="content7">Content7</div>
+            <div id="content6"><img src="Flowers.png" alt="flowers"></div>
+            <div id="content7"><img src="photograph.jpg" alt="fotografi"></div>
             <footer>Footer</footer>
         </div>
     </body>
