--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        <link rel="stylesheet" href="style.css">
        <link rel="script" href="script.js">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
+       <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <title>Portfolio</title>
     </head>
     <body>
@@ -46,7 +47,7 @@
                 Se gerne nogle af mine projekter nedenfor.</p></div>
             <div id="content6"><img src="Flowers.png" alt="flowers"></div>
             <div id="content7"><img src="photograph.jpg" alt="fotografi"></div>
-            <footer>Footer</footer>
+            <footer><h4>Copyright 2020</h4></footer>
         </div>
     </body>
 </html>
