--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
-            <main><img src="work.png" alt="laptop"></main>
+            <main><img src="work.png" alt="laptop">
+            <p>Portfolio</p></main>
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
             <div id="content3"><img src="concept-car-A.png" alt="konceptbil"></div>
