--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Portfolio</p></main>
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
-            <div id="content3"><img src="concept-car-A.png" alt="konceptbil"></div>
+            <div id="content3"><img src="concept-car-cut.png" alt="konceptbil"></div>
             <div id="content4"><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
