--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <!--Navbar start-->
         <nav class="navbar">
-            <div class="logo">Laura Jacobsen</div>
+            <div class="logo"><a href="lauramedie.dk">Laura Jacobsen</a></div>
             <a href="#" class="menubutton">
                 <span class="bar"></span>
                 <span class="bar"></span>
