Tekst til main billede og p tekst
Tekst til main billede og lavet ændringer i teksten i content5

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <!--Grid-->
         <div class="container">
             <main><img src="work.png" alt="laptop">
+            <div class="pictext">Laura Jacobsen <br> Multimediedesign <br> studerende</div>
             <p>Portfolio</p></main>
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
@@ -40,9 +41,9 @@
             </div>
             <div class="button">Se mere her</div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
-                Jeg bor i Næstved med min kæreste Magnus. 
-                Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi. 
-                Før det, har jeg taget en HF på Næstved gymnasium.
+                Jeg bor i Næstved med min kæreste Magnus.<br> 
+                Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge. 
+                Før det, har jeg taget en HF på Næstved gymnasium.<br>
                 I min fritid er jeg glad for at fotografere, og specielt natur.
                 <br>
                 <br>
