fontsize og font family

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--Grid-->
         <div class="container">
             <main><img src="work.png" alt="laptop">
-            <div class="pictext">Laura Jacobsen <br> Multimediedesign <br> studerende</div>
+            <div class="pictext">Laura Jacobsen <br> Multimediedesign <br> Studerende</div>
             <p>Portfolio</p></main>
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
