--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <meta name="description" content="portfolio">
        <meta name="keywords" content="html, css, script, portfolio, multimediedesign, laura">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="portfolio.css">
        <link rel="script" href="script.js">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
