Billeder sat ind til portfolio

--- a/index.html
+++ b/index.html
@@ -29,3 +29,14 @@
         </nav>
         <!--Navbar slut-->
         <!--Grid-->
+        <div class="container">
+            <div id="content1"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
+            <div id="content2"><img src="Tangopage.png" alt="tangodans"></div>
+            <div id="content3"><img src="Voltapage.png" alt="konceptbil"></div>
+            <div id="content4"><video controls>
+                <source src="Mahdi videoportrait .mp4" type="video/mp4">
+            </div>
+            <footer><h4>Copyright 2020</h4></footer>
+        </div>
+    </body>
+</html>
