h4 margin og font-size

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <!--Grid-->
         <div class="container">
             <div id="content1"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
-            <div class="box1">tekst</div>
+            <div class="box1"><p>tekst</p></div>
             <div id="content2"><h4>Dans Dans Dans</h4><img src="Tangopage.png" alt="tangodans"></div>
-            <div class="box2">Tekst</div>
+            <div class="box2"><p>Tekst</p></div>
             <div id="content3"><h4>Bag rattet</h4><img src="Voltapage.png" alt="konceptbil"></div>
-            <div class="box3">Tekst</div>
+            <div class="box3"><p>Tekst</p></div>
             <div id="content4"><h4>Video</h4><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
-            <div class="box4">Tekst</div>
+            <div class="box4"><p>Tekst</p></div>
             <footer><h4>Copyright 2020</h4></footer>
         </div>
     </body>
