Brødtekst til underside

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
             <div class="links">
                 <ul>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="#">Om mig</a></li>
                 </ul>
             </div>
@@ -31,11 +31,22 @@
         <!--Grid-->
         <div class="container">
             <div id="content1"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
-            <div class="box1"><p>tekst</p></div>
+            <div class="box1"><p>Rumrejsen er et fiktivt projekt, som gik ud på at konceptudvikle
+            ideer til salg af rejser ud i rummet.<br>
+            Kun fantasien satte grænser her.<br> Vores opgave var at lave et koncept og et website. <br>Da det var vores første projekt<br>
+            Havde vi ikke fokuseret på grupperoller</p></div>
             <div id="content2"><h4>Dans Dans Dans</h4><img src="Tangopage.png" alt="tangodans"></div>
-            <div class="box2"><p>Tekst</p></div>
+            <div class="box2"><p>Til Dans Dans Dans fik vi tildelt en specifik dans, <br>
+            hvor vi havde til opgave at lave et website for en danseskole.<br>
+            Derefter skulle vi overlevere projektet, til en anden gruppe.<br>
+            Vi modtog også selv et nyt projekt, som vi skulle bygge videre på.<br>
+            Min rolle i gruppen, var specialist, og jeg stod for holdsiden.</p></div>
             <div id="content3"><h4>Bag rattet</h4><img src="Voltapage.png" alt="konceptbil"></div>
-            <div class="box3"><p>Tekst</p></div>
+            <div class="box3"><p>Bag rattet er et projekt, som handler om at skabe et koncept,<br>
+            Og udvikle en salgsplatform. Konceptet skulle være branding af biler,<br>
+            Og senere skulle vi markedsføre vores koncept, på de sociale medier.<br>
+            Mine roller i gruppen var Idemand, Afslutter og Organisator.<br>Derudover stod jeg for
+            kontaktsiden.</p></div>
             <div id="content4"><h4>Video</h4><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
