--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <div id="content4"><h4>Video</h4><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
-            <div class="box4"><p>Tekst</p></div>
+            <div class="box4"><p>Video er et projekt, som handler om at producere en kort digital video.<br>
+            Her skulle vi lave en præsentation af vores makker. <br>Vi lærte at producere video,
+            og benyttede os af adobe Premiere Pro til at redigere i.</p></div>
             <footer><h4>Copyright 2020</h4></footer>
         </div>
     </body>
