--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="box1"><p>Rumrejsen er et fiktivt projekt, som gik ud på at konceptudvikle
             ideer til salg af rejser ud i rummet.<br>
             Kun fantasien satte grænser her.<br> Vores opgave var at lave et koncept og et website. <br>Da det var vores første projekt<br>
-            Havde vi ikke fokuseret på grupperoller</p></div>
+            Havde vi ikke fokuseret på grupperoller. <br>Men jeg stod for "om os" siden</p></div>
             <div id="content2"><h4>Dans Dans Dans</h4><img src="Tangopage.png" alt="tangodans"></div>
-            <div class="box2"><p>Til Dans Dans Dans fik vi tildelt en specifik dans, <br>
-            hvor vi havde til opgave at lave et website for en danseskole.<br>
+            <div class="box2"><p>Til Dans Dans Dans fik vi tildelt en specifik dans,
+            hvor vi fik tango dans. <br>Vi havde til opgave at lave et website for en danseskole.<br>
             Derefter skulle vi overlevere projektet, til en anden gruppe.<br>
             Vi modtog også selv et nyt projekt, som vi skulle bygge videre på.<br>
-            Min rolle i gruppen, var specialist, og jeg stod for holdsiden.</p></div>
+            Her fik vi zumba dans. <br>Min rolle i gruppen, var specialist, og jeg stod for holdsiden.</p></div>
             <div id="content3"><h4>Bag rattet</h4><img src="Voltapage.png" alt="konceptbil"></div>
             <div class="box3"><p>Bag rattet er et projekt, som handler om at skabe et koncept,<br>
             Og udvikle en salgsplatform. Konceptet skulle være branding af biler,<br>
@@ -52,7 +52,8 @@
             </div>
             <div class="box4"><p>Video er et projekt, som handler om at producere en kort digital video.<br>
             Her skulle vi lave en præsentation af vores makker. <br>Vi lærte at producere video,
-            og benyttede os af adobe Premiere Pro til at redigere i.</p></div>
+            og benyttede os af adobe Premiere Pro til at redigere i.<br>
+            Derudover lærte vi også om filmiske virkemidler, og grundelementer.</p></div>
             <footer><h4>Copyright 2020</h4></footer>
         </div>
     </body>
