--- a/portfolio.html
+++ b/portfolio.html
@@ -30,24 +30,24 @@
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
-            <div id="content1"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
+            <div id="rumrejse"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
             <div class="box1"><p>Rumrejsen er et fiktivt projekt, som gik ud på at konceptudvikle
             ideer til salg af rejser ud i rummet.<br>
             Kun fantasien satte grænser her.<br> Vores opgave var at lave et koncept og et website. <br>Da det var vores første projekt<br>
             Havde vi ikke fokuseret på grupperoller. <br>Men jeg stod for "om os" siden</p></div>
-            <div id="content2"><h4>Dans Dans Dans</h4><img src="Tangopage.png" alt="tangodans"></div>
+            <div id="tango"><h4>Dans Dans Dans</h4><img src="Tangopage.png" alt="tangodans"></div>
             <div class="box2"><p>Til Dans Dans Dans fik vi tildelt en specifik dans,
             hvor vi fik tango dans. <br>Vi havde til opgave at lave et website for en danseskole.<br>
             Derefter skulle vi overlevere projektet, til en anden gruppe.<br>
             Vi modtog også selv et nyt projekt, som vi skulle bygge videre på.<br>
             Her fik vi zumba dans. <br>Min rolle i gruppen, var specialist, og jeg stod for holdsiden.</p></div>
-            <div id="content3"><h4>Bag rattet</h4><img src="Voltapage.png" alt="konceptbil"></div>
+            <div id="volta"><h4>Bag rattet</h4><img src="Voltapage.png" alt="konceptbil"></div>
             <div class="box3"><p>Bag rattet er et projekt, som handler om at skabe et koncept,<br>
             Og udvikle en salgsplatform. Konceptet skulle være branding af biler,<br>
             Og senere skulle vi markedsføre vores koncept, på de sociale medier.<br>
             Mine roller i gruppen var Idemand, Afslutter og Organisator.<br>Derudover stod jeg for
             kontaktsiden.</p></div>
-            <div id="content4"><h4>Video</h4><video controls>
+            <div id="videotema"><h4>Video</h4><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
             <div class="box4"><p>Video er et projekt, som handler om at producere en kort digital video.<br>
