Ændret navn fra portfolio til galleri

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
        <link rel="script" href="script.js">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
-       <title>Portfolio</title>
+       <title>Galleri</title>
     </head>
     <body>
         <!--Navbar start-->
