Ændret container navn på galleri side

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         </nav>
         <!--Navbar slut-->
         <!--Grid-->
-        <div class="container">
+        <div class="container-galleri">    
             <div id="rumrejse"><h4>Rumrejsen</h4><img src="Rumrejsepage.png" alt="rumrejsen"></div>
             <div class="box1"><p>Rumrejsen er et fiktivt projekt, som gik ud på at konceptudvikle
             ideer til salg af rejser ud i rummet.<br>
