Styling af grid til galleri side

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
             Her skulle vi lave en præsentation af vores makker. <br>Vi lærte at producere video,
             og benyttede os af adobe Premiere Pro til at redigere i.<br>
             Derudover lærte vi også om filmiske virkemidler, og grundelementer.</p></div>
-            <footer><h4>Copyright 2020</h4></footer>
+            <footer><p>Copyright 2020</p></footer>
         </div>
     </body>
 </html>
