Fjern <br> i brødtekst og lavet font-size

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             </div>
             <div class="button">Se mere her</div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
-                Jeg bor i Næstved med min kæreste Magnus.<br> 
+                Jeg bor i Næstved, med min kæreste Magnus. 
                 Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge. 
-                Før det, har jeg taget en HF på Næstved gymnasium.<br>
+                Før det, har jeg taget en HF på Næstved gymnasium.
                 I min fritid er jeg glad for at fotografere, og specielt natur.
                 <br>
                 <br>
