--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <body>
         <!--Navbar start-->
         <nav class="navbar">
-            <div class="logo"><a href="lauramedie.dk">Laura Jacobsen</a></div>
+            <div class="logo"><a href="http://lauramedie.dk/index.html">Laura Jacobsen</a></div>
             <a href="#" class="menubutton">
                 <span class="bar"></span>
                 <span class="bar"></span>
