--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <!--Navbar start-->
         <nav class="navbar">
-            <div class="logo"><a href="lauramedie.dk">Laura Jacobsen</a></div>
+            <div class="logo"><a href="http://lauramedie.dk/index.html">Laura Jacobsen</a></div>
             <a href="#" class="menubutton">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -22,8 +22,8 @@
             </a>
             <div class="links">
                 <ul>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Om mig</a></li>
+                    <li><a href="http://lauramedie.dk/portfolio.html">Portfolio</a></li>
+                    <li><a href="http://lauramedie.dk/index.html">Om mig</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,7 +39,7 @@
             <div id="content4"><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
-            <div class="button">Se mere her</div>
+            <div class="button"><a href="http://lauramedie.dk/portfolio.html">Se mere her</a></div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
                 Jeg bor i Næstved, med min kæreste Magnus. 
                 Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge. 
