--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="content4"><video controls>
                 <source src="Mahdi videoportrait .mp4" type="video/mp4">
             </div>
-            <div class="button"><a href="http://lauramedie.dk/portfolio.html">Se mere her</a></div>
+            <div class="button"><a href="http://lauramedie.dk/portfolio.html">Galleri</a></div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
                 Jeg bor i Næstved, med min kæreste Magnus. 
                 Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge. 
