Nyt content(billeder)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 Se gerne nogle af mine projekter nedenfor.</p></div>
             <div id="content6"><img src="Flowers.png" alt="flowers"></div>
             <div id="content7"><img src="photograph.jpg" alt="fotografi"></div>
+            <div id="content8"><img src="Sunnyplant.jpg" alt="Plante"></div>
+            <div id="content9"><img src="prettyflower.JPG" alt="Blomst"></div>
             <footer><h4>Copyright 2020</h4></footer>
         </div>
     </body>
