Byttet om på links

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
             </a>
             <div class="links">
                 <ul>
+                    <li><a href="http://lauramedie.dk/index.html">Hjem</a></li>
                     <li><a href="http://lauramedie.dk/portfolio.html">Portfolio</a></li>
-                    <li><a href="http://lauramedie.dk/index.html">Om mig</a></li>
                 </ul>
             </div>
         </nav>
