--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </a>
             <div class="links">
                 <ul>
+                    <li><a href="http://lauramedie.dk/index.html">Hjem</a></li>
                     <li><a href="http://lauramedie.dk/portfolio.html">Portfolio</a></li>
                 </ul>
             </div>
