Ændring af button a + link a

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="links">
                 <ul>
                     <li><a href="http://lauramedie.dk/index.html">Hjem</a></li>
-                    <li><a href="http://lauramedie.dk/portfolio.html">Portfolio</a></li>
+                    <li><a href="http://lauramedie.dk/portfolio.html">Galleri</a></li>
                 </ul>
             </div>
         </nav>
