--- a/index.html
+++ b/index.html
@@ -6,27 +6,25 @@
        <meta name="keywords" content="html, css, script, portfolio, multimediedesign, laura">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="style.css">
-       <link rel="script" href="script.js">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <link rel="stylesheet" href="https://use.typekit.net/klp2vbi.css">
        <title>Portfolio</title>
     </head>
     <body>
         <!--Navbar start-->
-        <nav class="navbar">
+        <nav>
             <div class="logo"><a href="http://lauramedie.dk/index.html">Laura Jacobsen</a></div>
-            <a href="#" class="menubutton">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="links">
-                <ul>
+                <ul class="links">
                     <li><a href="http://lauramedie.dk/index.html">Hjem</a></li>
                     <li><a href="http://lauramedie.dk/portfolio.html">Galleri</a></li>
                 </ul>
+            <div class="burger">
+                <div class="linje1"></div>
+                <div class="linje2"></div>
+                <div class="linje3"></div>
             </div>
         </nav>
+        <link rel="script" href="script.js">
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
