--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,16 @@
     </head>
     <body>
         <!--Navbar start-->
-        <nav class="navbar">
+        <nav>
             <div class="logo"><a href="http://lauramedie.dk/index.html">Laura Jacobsen</a></div>
-            <a href="#" class="menubutton">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="links">
-                <ul>
+                <ul class="links">
                     <li><a href="http://lauramedie.dk/index.html">Hjem</a></li>
                     <li><a href="http://lauramedie.dk/portfolio.html">Galleri</a></li>
                 </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
         </nav>
         <!--Navbar slut-->
