Fjernet tekst "portfolio"

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
-            <main><img src="work.png" alt="laptop">
-            <div class="pictext">Laura Jacobsen <br> Multimediedesign <br> Studerende</div>
-            <p>Portfolio</p></main>
+            <main><img src="work.png" alt="laptop"></main>
+            <div class="pictext">Laura Jacobsen <br> Multimediedesign<br>Studerende</div>
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
             <div id="content3"><img src="concept-car-cut.png" alt="konceptbil"></div>
