--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
             <div id="content3"><img src="concept-car-cut.png" alt="konceptbil"></div>
-            <div id="content4"><video controls>
-                <source src="Mahdi videoportrait.mp4" type="video/mp4"></div></video>
+            <div id="content4"><video controls></video>
+                <source src="Mahdi videoportrait.mp4" type="video/mp4"></div>
             <div class="button"><a href="http://lauramedie.dk/portfolio.html">Galleri</a></div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
                 Jeg bor i Næstved, med min kæreste Magnus. 
