Ændret navn fra script til stylesheet

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="linje3"></div>
             </div>
         </nav>
-        <link rel="script" href="script.js">
+        <link rel="stylesheet" href="script.js">
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container">
