--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <link rel="script" href="script.js">
+        <link rel="stylesheet" href="script.js">
         <!--Navbar slut-->
         <!--Grid-->
         <div class="container-galleri">    
