--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
             <div id="content3"><img src="concept-car-cut.png" alt="konceptbil"></div>
             <div id="content4"><video controls></video>
-                <source src="Mahdi-videoportrait.mp4" type="video/mp4"></div>
+                <source src="Mahdi.mp4" type="video/mp4"></div>
             <div class="button"><a href="http://lauramedie.dk/portfolio.html">Galleri</a></div>
             <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
                 Jeg bor i Næstved, med min kæreste Magnus. 
