Ændring af p tekst og styling

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <div id="content4"><video controls></video>
                 <source src="Mahdi.mp4" type="video/mp4"></div>
             <div class="button"><a href="http://lauramedie.dk/portfolio.html">Galleri</a></div>
-            <div id="content5"><p>Mit navn er Laura, og jeg er 20 år. 
-                Jeg bor i Næstved, med min kæreste Magnus. 
-                Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge. 
-                Før det, har jeg taget en HF på Næstved gymnasium.
-                I min fritid er jeg glad for at fotografere, og specielt natur.
+            <div id="content5"><p>Mit navn er Laura. jeg er 20 år og bor i Næstved.<br>                
+                Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge.<br>                
+                Før det, har jeg taget en HF på Næstved gymnasium.<br> 
+                Jeg elsker at være kreativ, og fordybe mig i ny viden.<br>             
+                I min fritid er jeg især glad for at fotografere, og specielt natur. 
                 <br>
                 <br>
                 Se gerne nogle af mine projekter nedenfor.</p></div>
