Fikset manglende video

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,7 @@
             Og senere skulle vi markedsføre vores koncept, på de sociale medier.
             Mine roller i gruppen var Idemand, Afslutter og Organisator. Derudover stod jeg for
             kontaktsiden.<br><a href="http://lauramedie.dk/volta%202/contact.html" target="_blank">Se siden her</a></p></div>
-            <div id="videotema"><video controls></video>
-                <source src="Mahdi.mp4" type="video/mp4"></div>
+            <div id="videotema"><iframe src="Mahdi.mp4" type="video/mp4"></iframe></div>
             <div class="box4"><h4>Video</h4><p>Video er et projekt, som handler om at producere en kort digital video.
             Her skulle vi lave en præsentation af vores makker. Vi lærte at producere video,
             og benyttede os af adobe Premiere Pro til at redigere i.
