--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <div id="content1"><img src="Climarsphotoshop.jpg" alt="rumrejsen"></div>
             <div id="content2"><img src="Tangodanssenior.jpeg" alt="tangodans"></div>
             <div id="content3"><img src="concept-car-cut.png" alt="konceptbil"></div>
-            <div id="content4"><video controls></video>
-                <source src="Mahdi.mp4" type="video/mp4"></div>
+            <div id="content4"><iframe src="Mahdi.mp4" type="video/mp4"></iframe></div>
             <div class="button"><a href="http://lauramedie.dk/portfolio.html">Galleri</a></div>
             <div id="content5"><p>Mit navn er Laura. jeg er 20 år og bor i Næstved.<br>                
                 Til hverdag studerer jeg multimediedesign på Zealand erhvervsakademi, i Køge.<br>                
