Tilføjelse af tekst og rettet video
Rettet video til desktop

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,9 @@
             <div class="box4"><h4>Video</h4><p>Video er et projekt, som handler om at producere en kort digital video.
             Her skulle vi lave en præsentation af vores makker. Vi lærte at producere video,
             og benyttede os af adobe Premiere Pro til at redigere i.
-            Derudover lærte vi også om filmiske virkemidler, og grundelementer.</p></div>
+            Derudover lærte vi også om filmiske virkemidler, og grundelementer.<br>
+            Jeg valgte at lave en video på baggrund af min makkers interesser.<br> 
+            Da han er glad for synthwave, har jeg derfor redigeret videoen i denne stil.</p></div>
             <footer><p>Copyright 2020</p></footer>
         </div>
     </body>
