--- a/portfolio.html
+++ b/portfolio.html
@@ -31,18 +31,18 @@
             <div id="rumrejse"><img src="Rumrejsepage.png" alt="rumrejsen"></div>
             <div class="box1"><h4>Rumrejsen</h4><p>Rumrejsen er et fiktivt projekt, som gik ud på at konceptudvikle
             ideer til salg af rejser ud i rummet.
-            Kun fantasien satte grænser her. Vores opgave var at lave et koncept og et website. Da det var vores første projekt
-            Havde vi ikke fokuseret på grupperoller. Men jeg stod for om os siden.<br><a href="http://lauramedie.dk/Rumrejsen-climars/index-hvem-er-vi.html" target="_blank">Se siden her</a></p></div>
+            Kun fantasien satte grænser her. Vores opgave var at lave et koncept, og et website. Da det var vores første projekt,
+            havde vi ikke fokuseret på grupperoller. Men jeg stod for om os siden.<br><a href="http://lauramedie.dk/Rumrejsen-climars/index-hvem-er-vi.html" target="_blank">Se siden her</a></p></div>
             <div id="tango"><img src="Tangopage.png" alt="tangodans"></div>
             <div class="box2"><h4>Dans Dans Dans</h4><p>Til Dans Dans Dans fik vi tildelt en specifik dans,
-            hvor vi fik tango dans. Vi havde til opgave at lave et website for en danseskole.
+            hvor vi fik tango dans. Vi havde til opgave at lave et website, for en danseskole.
             Derefter skulle vi overlevere projektet, til en anden gruppe.
             Vi modtog også selv et nyt projekt, som vi skulle bygge videre på.
             Her fik vi zumba dans. Min rolle i gruppen, var specialist, og jeg stod for holdsiden.<br><a href="http://lauramedie.dk/DansDansDans/index.html" target="_blank">Se siden her</a></p></div>
             <div id="volta"><img src="Voltapage.png" alt="konceptbil"></div>
             <div class="box3"><h4>Bag rattet</h4><p>Bag rattet er et projekt, som handler om at skabe et koncept,<br>
-            Og udvikle en salgsplatform. Konceptet skulle være branding af biler,
-            Og senere skulle vi markedsføre vores koncept, på de sociale medier.
+            og udvikle en salgsplatform. Konceptet skulle være branding af biler,
+            og senere skulle vi markedsføre vores koncept, på de sociale medier.<br>Vi valgte at lave en high end bil, hvilket hjemmesiden også skal afspejle.<br>
             Mine roller i gruppen var Idemand, Afslutter og Organisator. Derudover stod jeg for
             kontaktsiden.<br><a href="http://lauramedie.dk/volta%202/contact.html" target="_blank">Se siden her</a></p></div>
             <div id="videotema"><iframe src="Mahdi.mp4" name="video/mp4"></iframe></div>
